--- a/src/main/java/Handelsakademin/StoreProgram/OrderHistoryForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/OrderHistoryForm.form
@@ -180,6 +180,9 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1146675"/>
+              <font name="Forte" style="0"/>
+              <foreground color="-2104859"/>
               <text value="Cancel order"/>
             </properties>
           </component>
