--- a/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
@@ -27,7 +27,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
