--- a/src/main/java/Handelsakademin/StoreProgram/ShoppingForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/ShoppingForm.form
@@ -221,7 +221,7 @@
               <text value="Change profile"/>
             </properties>
           </component>
-          <component id="56433" class="javax.swing.JLabel" binding="userNameLable">
+          <component id="56433" class="javax.swing.JLabel" binding="userNameLabel">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -346,6 +346,7 @@
                 </constraints>
                 <properties>
                   <background color="-1"/>
+                  <selectionBackground color="-1146675"/>
                 </properties>
               </component>
               <component id="1d203" class="javax.swing.JLabel">
